# universal-object-recognition

./: .gitignore  AGENTS.md  README.md  pyproject.toml
context/: README.md
context/design/: README.md  project-idea.md
context/hints/: README.md
context/instructions/: README.md
context/logs/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/roles/role1/: README.md
context/roles/role2/: README.md
context/summaries/: README.md
context/tasks/: README.md
context/tasks/backlog/: README.md
context/tasks/done/: README.md
context/tasks/working/: README.md
context/tools/: README.md
dnn_models/: README.md
dnn_models/florence-2-base/: README.md  source
dnn_models/qwen-2.5-vl/: README.md  source
docs/: 使用指南.md  开发计划.md  架构设计.md  概述.md
src/univ_obj/: __init__.py
src/universal_object_recognition/: __init__.py
tests/: README.md
