[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
dependencies = ["opencv-python-headless>=4.12.0.88,<5", "scipy>=1.16.3,<2", "nicegui>=3.2.0,<4", "pydantic>=2.12.4,<3", "attrs>=25.4.0,<26", "omegaconf>=2.3.0,<3", "mypy>=1.18.2,<2", "ruff>=0.14.4,<0.15", "vllm>=0.11.0,<0.12"]
name = "universal-object-recognition"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
universal_object_recognition = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
