[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
name = "universal-object-recognition"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "opencv-python-headless>=4.12.0.88,<5",
  "scipy>=1.16.3,<2",
  "nicegui>=3.2.0,<4",
  "pydantic>=2.12.4,<3",
  "attrs>=25.4.0,<26",
  "omegaconf>=2.3.0,<3",
  "mypy>=1.18.2,<2",
  "ruff>=0.14.4,<0.15",
  # vLLM: 仅 Linux 支持，Windows 排除
  "vllm>=0.11.0,<0.12; platform_system == 'Linux'",
  "transformers>=4.57.1,<5",
  "accelerate>=1.11.0,<2",
  "imageio>=2.37.2,<3",
  "fastapi>=0.115.0,<1",
  "uvicorn>=0.38.0,<0.39",
  # 推理后端：仅 Linux，优先 GPU 版 ORT
  "onnxruntime-gpu>=1.23.2,<2",
  "mdutils>=1.8.1,<2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
universal-object-recognition = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
  "src/univ_obj",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/univ_obj",
  "README.md",
  "AGENTS.md",
  "docs/**",
  "context/**",
]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
